# taqsim

./: .gitignore  CLAUDE.md  LICENSE  LP_example.py  README.md  README_optimization.md  README_water_system_creation.md  ToGetList.md  ZRB_optimisation.py  ZRB_optimisation_GA.md  ZRB_optimisation_experiments.ipynb  ZRB_optuna.py  ZRB_optuna.slurm  ZRB_optuna_4.py  ZRB_optuna_4.slurm  ZRB_optuna_6.py  ZRB_optuna_6.slurm  ZRB_optuna_8.py  ZRB_optuna_8.slurm  ZRB_optuna_8_best_param.json  ZRB_optuna_experiment.ipynb  ZRB_sim_2_opt_param.json  ZRB_simulation.py  ZRB_system.py  ZRB_system.slurm  ZRB_system_creator.py  ZRB_tests.py  ZRB_tests_district_level.py  best_param_current_period.json  complex_system_balance.csv  deap_example.py  diversion_system_balance.csv  drought_system_balance.csv  dummy_creator.py  git_commit strategy.md  groundwater_implementation_deapsearch.md  gw_test_system.py  hydroworks_system_balance.csv  opt_6_B_best_fit.json  opt_deap_example.py  (+33 more)
data/: Akdarya_H_V_A.csv  DemandNode_Info.csv  Inflow_Rovatkhodzha_monthly_2010_2023_ts.csv  Kashkadarya_min_flow_monthly_2000_2022.csv  Kattakurgan_H_V_A.csv  Navoi_min_flow_monthly_1968_2020.csv  Navoi_min_flow_monthly_norm_ts_2017_2022.csv  Navoi_min_flow_monthly_plus_norm_1968_2022.csv  Reservoir_ET_2010_2023.csv  Sink_Eski Ankhor_monthly_2000_2021.csv  Sink_Eski Tuyatortor_monthly_2000_2021.csv  Sink_Eski Tuyatortor_monthly_2000_2022.csv  demand_17to22.csv  et_reservoir_2017_2022_prediction.csv  extended_predicted_reservoir_et_2010_2022.csv  reservoir_et_2010_2019_predicted.csv
documentation/: 00_philosophy.md  README.md  README_node_types.md  README_optimization.md  README_system_creation_example.md  README_water_system_creation.md  marimo.md  testing.md
legacy/: ZRB_optimisation.py  ZRB_simulation.py  ZRB_system_creator.py  test_system.py
materials/: weap_tutorial.txt
notebooks/: flood_simulation.py  reservoir_optimization_4obj.ipynb  taqsim_showcase.py  (+5 more)
(+276 files in other folders)
